hphp/hack/test/typecheck/higher_kinded_types/simple_kinds_in_constraints.php
<?hh // strict




class C<T, T2<_>> {}


// kind mismatch here
function test<TX as C<int, C>>() : void {}
